--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -1,7 +1,5 @@
-<!--
   <li>
-    <a href="http://link-to-whatever-social-network.com/user/" itemprop="sameAs">
-      <i class="fa fa-fw" aria-hidden="true"></i> Custom Social Profile Link
+    <a href="https://itunes.apple.com/ru/podcast/пространство-смыслов/id1247153559?mt=2">
+      <i class="fa fa-fw fa-podcast" aria-hidden="true"></i> iTunes Podcast
     </a>
   </li>
--->
