--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -287,6 +287,11 @@ body:hover .visually-hidden button {
   .fa-xing-square {
     color: $xing-color;
   }
+  
+  .fa-podcast {
+      color: #b251c9
+  }
+  
 }
 
 
