--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,4 +2,11 @@
 
 <!-- insert favicons. use http://realfavicongenerator.net/ -->
 
+<!-- Include jQuery that are mandatory for Jouele -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<!-- Include Jouele: JS and CSS -->
+<script src="/assets/js/jouele.js"></script>
+<link href="/assets/css/jouele.css" rel="stylesheet"/>
+
 <!-- end custom head snippets -->
