likely social share buttons

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -9,4 +9,7 @@
 <script src="/assets/js/jouele.js"></script>
 <link href="/assets/css/jouele.css" rel="stylesheet"/>
 
+<script src="/assets/js/likely.js"></script>
+<link rel="stylesheet" href="/assets/css/likely.css">
+
 <!-- end custom head snippets -->
