--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -2,7 +2,11 @@
   <div class="masthead__inner-wrap">
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
-        <a class="site-title" href="{{ '/' | absolute_url }}">{{ site.title }}</a>
+        <a class="site-title" href="{{ '/' | absolute_url }}">
+	  <img src="{{ site.url }}/assets/images/logo.png"
+	       style="height: 70px; margin-right: 15px">
+	  {{ site.title }}
+	</a>
         <ul class="visible-links">
           {% for link in site.data.navigation.main %}
             {% if link.url contains 'http' %}
