*** empty log message ***

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -4,7 +4,7 @@
       <nav id="site-nav" class="greedy-nav">
         <a class="site-title" href="{{ '/' | absolute_url }}">
 	  <img src="{{ site.url }}/assets/images/logo.png"
-	       style="height: 70px; margin-right: 15px">
+	       style="height: 70px; margin-right: 1em">
 	  {{ site.title }}
 	</a>
         <ul class="visible-links">
