--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -12,4 +12,6 @@
 <script src="/assets/js/likely.js"></script>
 <link rel="stylesheet" href="/assets/css/likely.css">
 
+<link rel="icon" type="image/png" href="assets/images/logo.png" />
+
 <!-- end custom head snippets -->
