*** empty log message ***

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -12,6 +12,7 @@
 <script src="/assets/js/likely.js"></script>
 <link rel="stylesheet" href="/assets/css/likely.css">
 
-<link rel="icon" type="image/png" href="assets/images/logo.png" />
+<link rel="shortcut icon"
+ href="favicon.ico" />
 
 <!-- end custom head snippets -->
