--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -12,7 +12,7 @@
 <script src="/assets/js/likely.js"></script>
 <link rel="stylesheet" href="/assets/css/likely.css">
 
-<link rel="shortcut icon"
- href="favicon.ico" />
+
+<link rel="icon shortcut" type="image/png" href="assets/images/logo.png" />
 
 <!-- end custom head snippets -->
