--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,7 +8,10 @@
 
 .masthead {
     &__inner-wrap {
-	padding: 0em 1em 0em;
+	padding: 0em 0em 0em;
     }
 }
 
+.site-title {
+    align-self: center;
+}
