--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
 </script>
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="{{ '/assets/css/main.css' | absolute_url }}">
+<link rel="stylesheet" href="{{ '/assets/css/main.css' | url }}">
 
 <!--[if lte IE 9]>
   <style>
